src/themes/global.css
@font-face {
  font-family: MyFont;
  font-style: normal;
  font-weight: normal;
  src: local("MyFont"), url("./font/OpenSans-Regular.ttf");
}

* {
  border: 0;
  margin: 0;
  padding: 0;
}

body {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.88), rgba(0, 0, 0, 0.88)), url("../assets/img/bg/bg-2.jpg");
  background-repeat: repeat;
  font-family: MyFont;
  font-size: 16px;
}

.main-container {
  background-color: transparent;
}

@media only screen and (max-width: 479px) {
  .main-container {
    width: 100%;
  }
}

@media only screen and (min-width: 479px) {
  .main-container {
    max-width: 880px;
    margin: 0 auto;
  }
}

.text-deeppink {
  color: deeppink;
}

.text-cornsilk {
  color: cornsilk;
}

.text-dodgerblue {
  color: dodgerblue;
}

.bg-darkcyan {
  background-color: darkcyan;
}

.bg-cornsilk {
  background-color: cornsilk;
}

.bg-ghostwhite {
  background-color: GhostWhite;
}

.responsible-list li {
  background: transparent;
}

.project-name {
  font-weight: bold;
}

.project-table {
  border: 1px solid #666;
  border-collapse: collapse;
}

.avatar {
  max-width: 120px;
}

.contact {
  display: flex;
  justify-content: center;
}

.contact-link {
  text-decoration: none;
}

.contact-icon {
  min-width: 25px;
  max-width: 30px;
}

.skill-icon {
  min-width: 100px;
  max-width: 120px;
}

.it-terms {
  color: gray;
}

.cursor-pointer {
  cursor: pointer;
}

.certification-img {
  max-width: 12rem;
}

.no-over-size {
  border: 0;
  margin: 0;
  padding: 0;
}

.main-skill {
  background-color: Aquamarine;
}

/* Tabs */
.tabs-component-tabs {
  padding: 0;
  margin: 0;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  background-color: white;
}

.tabs-component-tab {
  padding: 4px;
  margin: 4px;
  border: 1px solid black;
  border-top-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.tabs-component-tab-a {
  text-decoration: none;
}

